# uv-v-pip

./: Dockerfile.pip  Dockerfile.uv  README.md  pyproject.toml  requirements.txt  results.csv  results.txt
